--- a/02-ngnix.yaml
+++ b/02-ngnix.yaml
@@ -4,5 +4,5 @@
   tasks:
   - name: installing nginx
     ansible.builtin.dnf:
-      - name: nginx
-        state: latest
+      name: nginx
+      state: latest
