--- a/08-var-preferances.yaml
+++ b/08-var-preferances.yaml
@@ -4,17 +4,21 @@
   vars:
     wishes: "morning from play level"
 
-  vars_prompt:
-  - name: wishes
-    prompt: enter the wishes
-    private: false
+  # vars_prompt:
+  # - name: wishes
+  #   prompt: enter the wishes
+  #   private: false
 
   vars_files:
   - varfiles.yaml
-  
+
   tasks:
   - name: variable prefarance
     vars:
       wishes: "morning from task level"
     ansible.builtin.debug:
       msg: "Hi, good {{ wishes }}"
+
+
+      # arguments level run avthundhi
+      # prompt
