--- a/08-var-preferances.yaml
+++ b/08-var-preferances.yaml
@@ -1,8 +1,8 @@
 - name: checking variable prefarances
   hosts: node
   become: yes
-  vars:
-    wishes: "morning from play level"
+  # vars:
+  #   wishes: "morning from play level"
 
   # vars_prompt:
   # - name: wishes
@@ -24,4 +24,5 @@
       # prompt
       # Task level
       # var files
+      # Play level 
 
