--- a/10.conditions.yaml
+++ b/10.conditions.yaml
@@ -8,8 +8,8 @@
   tasks:
   - name: given number is less than 10
     ansible.builtin.debug:
-      msg: " Given number is less than 10"
+      msg: " Given {{ number }} is less than 10"
   - name: given number is grater than 10
     ansible.builtin.debug:
-      msg: " Given number is greater than 10"
+      msg: " Given {{ number }} is greater than 10"
   
