--- a/11.filters.yaml
+++ b/11.filters.yaml
@@ -4,4 +4,4 @@
   tasks:
   - name: check variables
     ansible.builtin.debug:
-      msg: "my name is {{ name }}"
+      msg: "my name is {{ name | default ( 'mamatha') }}"
