--- a/11.filters.yaml
+++ b/11.filters.yaml
@@ -46,3 +46,38 @@
   - name: find duplicate num
     ansible.builtin.debug:
       msg: "{{ numbers | unique }}" 
+
+- name: converting dictionary to list # dict means map,item
+  hosts: node
+  become: yes
+  vars:
+    my_dict:
+      Course: Devops
+      Duration: 3 years
+      Trainer: Mamatha
+  tasks:
+  - name: before convering
+    ansible.builtin.debug:
+      msg: " before convering {{ my_dict }}"
+  - name: before convering
+    ansible.builtin.debug:
+      msg: " before convering {{ my_dict | dict2item }}"
+
+
+- name: converting list to dictionary # dict means map,item
+  hosts: node
+  become: yes
+  vars:
+    my_list:
+    - {'key': 'Course', 'value': 'Ansbile'}
+    - {'key': 'Trainer', 'value': 'Sivakumar'}
+    - {'key': 'Duration', 'value': '120hr'}
+  tasks:
+  - name: before convering
+    ansible.builtin.debug:
+      msg: " before convering {{ my_list }}"
+  - name: before convering
+    ansible.builtin.debug:
+      msg: " before convering {{ my_list | item2dict }}"
+
+
